# zanuda

./: .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .ocamlformat  .zanuda  CHANGES  CHANGES.md  Develop.md  Makefile  README.md  TODO.md  demo-zanuda-plugin.opam  dune  dune-project  dune-workspace.ci  mylinter-example.opam  mylinter.install  mylinter.opam  reviewer.install  reviewer.opam  zanuda.install  zanuda.opam  zanuda.opam.template
review/: blob1.diff  diff_parser.ml  diff_parser.mli  dune  line_parser.ml  line_parser.mli  main.ml  parser.ml  run.t  tests.ml  types.ml
review/tests/new/: added.txt
review_tests/: 112.diff  112.t  40.diff  40.t  dune  extended.diff  extended.t  extended2.diff  extended2.t  no_new_line.diff  no_new_line.t  run.t
review_tests/test1.t/: dune  run.t
review_tests/test1.t/new/: changed.txt
review_tests/test1.t/old/: changed.txt
review_tests/test2.t/: dune  run.t  test.diff  test.js
src/: CollectedDecls.ml  CollectedDecls.mli  CollectedLints.ml  CollectedLints.mli  Collected_decls.ml  Collected_decls.mli  Collected_lints.ml  Collected_lints.mli  Config.ml  Dune_project.ml  Dune_project.mli  Dynamic_plugins.ml  LINT.mli  Lint_filesystem.ml  Lint_filesystem.mli  LoadDune.ml  LoadDune.mli  Load_dune.ml  Load_dune.mli  MyUntype.ml  My_pprintast.ml  PerDictionary.ml  Tast_pattern.ml  Tast_pattern.mli  TypedLints.ml  UntypedLints.ml  Unused_ML_logger.ml  camel_cased_types.ml  camel_cased_types.mli  demo_zanuda_plugin.ml  dune  list_length_comparisons.ml  main.ml  mylint.ml  no_docs_parsetree.mli  utils.ml
src/fix/refactoring/: IfBool.ml  If_bool.ml  ProposeFunction.ml  Propose_function.ml  Record1.ml  Record_punning.ml  dune  utils.ml
src/fix/replacement/: comments_parser.ml  dune  log.ml  padding.ml  refill.ml
src/pattern/: MyPrinttyped.ml  MyUntype.ml  My_printtyped.ml  My_untype.ml  Tast_pattern.ml  Tast_pattern.mli  ast_pattern_tests.ml  dune
src/typed/: Aggregate_defs.ml  AmbiguousConstructors.ml  Ambiguous_constructors.ml  Disabling_all_warnings.ml  Equality.ml  Equality_phys.ml  Equality_phys.mli  Eta.ml  Eta.mli  ExcTryWithWildcard.ml  Exc_try_with_wildcard.ml  Failwith.ml  Format.ml  FunctionEstimator.ml  Guard_instead_of_if.ml  Hashtables.ml  Hashtables.mli  IfBool.ml  If_bool.ml  Ignore.ml  License.ml  ListFusion.ml  ListLength.ml  List_fusion.ml  List_length.ml  Manual_fold.ml  Manual_map.ml  Match_Bool.ml  MonadLaws.ml  Monad_laws.ml  Mutually_rec_types.ml  Nested_if.ml  On_offer.ml  On_offer.mli  Parsetree_has_docs.ml  Printf.ml  ProposeFunction.ml  Propose_function.ml  Record1.ml  Record_punning.ml  (+6 more)
src/unidiff/: dune  parser.ml  test.ml  unidiff.ml
src/untyped/: AmbiguousConstructors.ml  Casing.ml  Dollar.ml  Expect_names.ml  GuardInsteadOfIf.ml  License.ml  Manual_fold.ml  Manual_map.ml  ParsetreeHasDocs.ml  Parsetree_has_docs.ml  Propose_function.ml  ToplevelEval.ml  Toplevel_eval.ml  VarShouldNotBeUsed.ml  Var_should_not_be_used.ml  dune
src/unused_decls/: MLILogger.ml  MLLogger.ml  dune
tests/lib.t/: Parsetree.mli  dune  dune-project  lib.ml  lib2.ml  run.t
tests/lib.t/lib3/: dune
tests/typed/: dune  exec1.ml
tests/typed.t/: Failwith.ml  Ignore.ml  dune  exec1.ml  list_len.ml  run.t
tests/typed/Equality.t/: Equality.ml  dune  run.t
tests/typed/Eta.t/: Eta.ml  deriv.ml  dune  run.t
tests/typed/Eta53.t/: Eta.ml  dune  dune-project  run.t  run53.t
tests/typed/ExcTry.t/: ExcTryWithWildcard.ml  dune  run.t
tests/typed/Guard_instead_of_if.t/: If_guard.ml  dune  run.t
tests/typed/Ignore.t/: dune  run.t
tests/typed/License.t/: REPL.ml  bad.ml  bad2.ml  bad3.ml  dune  good.ml  good2.ml  run.t
tests/typed/License.t/lib/: asdf.ml  dune
tests/typed/ListFusion.t/: ListFusion.ml  dune  run.t
tests/typed/MatchBool.t/: MatchBool.ml  dune  run.t
tests/typed/Mutually_rec_types.t/: Mutually_rec_types.ml  ast2.ml  dune  dune-project  run.t
tests/typed/Record1.t/: Record1.ml  Record2.ml  dune  run.t
tests/typed/StringConcat.t/: StringConcat.ml  dune  run.t
tests/typed/ToplevelEval.t/: dune  run.t  test_toplevel_eval.ml
tests/typed/Tuple_matching.t/: dune  run.t
tests/typed/Tuplematching.t/: Tuple_matching.ml  dune  run.t
tests/typed/amb_cstrs.t/: amb_cstrs.ml  dune  run.t
tests/typed/ast.t/: Parser.ml  Parser.mli  Parsetree.ml  Parsetree.mli  dune  run.t
tests/typed/ast_docs.t/: ast.mli  dune  run.t
tests/typed/disable_all_warnings.t/: dune  main.ml  run.t
tests/typed/failwith.t/: Failwith.ml  dune  run.t
tests/typed/filesystem.t/: Asdf.ml  dune  run.t
tests/typed/format.t/: dune  run.t  test_Format.ml
tests/typed/function.t/: Function.ml  dune  false_positive.ml  orpat.ml  run.t
tests/typed/functions_count.t/: Functions.ml  dune  run.t
tests/typed/hashtables.t/: .zanuda  Counter.ml  Hashtables.ml  dune  run.t  tast.ml
tests/typed/ifbool.t/: IfBool.ml  dune  run.t
tests/typed/ignorance.t/: Main.ml  dune  run.t
tests/typed/list_len.t/: dune  list_len.ml  run.t
tests/typed/manual_fold.t/: dune  manual_fold.ml  run.t
tests/typed/manual_map.t/: dune  manual_map.ml  run.t
tests/typed/monad_laws.t/: dune  laws.ml  run.t
tests/typed/nested_if.t/: Nested_if.ml  dune  dune-project  run.t
tests/typed/var_should_not_be_used.t/: dune  false_positives.ml  lib.ml  run.t
tests/typed/vendored.t/: dune  run.t
tests/typed/vendored.t/src/: Asdf.ml  dune  gen.sh
tests/untyped.t/: dollar.ml  dune  dune-project  lib.ml  lib2.ml  parser1.mly  run.t  startingWildcard.ml  test2.ml
tests/untyped.t/lib3/: a.ml  dune
tests/unused_func/Inline_tests.t/: .gitignore  .ocamlformat  CSharpOOP.opam  Nonwrapped.ml  Nonwrapped.mli  README.md  dune  dune-project  run.t
tests/unused_func/Inline_tests.t/lib/: ast.ml  dune  p_tests.ml  p_tests.mli  parser.ml  parser.mli
tests/unused_func/Simple.t/: SecondTU.ml  Simple.ml  Simple.mli  custom_demo.ml  custom_lib_impl.ml  custom_lib_impl.mli  dune  dune-project  run.t
ts/: a.ts  demo.ml  dune  dune-project  run.t
utils/: Config.ml  LINT.mli  Rdjson.ml  UntypedLints.ml  dune  hack.ml  mylint.ml  stubs.c
(+119 files in other folders)
