(env
 (dev
  (flags
   (:standard -w -9-27-32))))

(executable
 (package reviewer)
 (name main)
 (public_name reviewer)
 (modules main)
 (libraries diff_parser curly)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name diff_parser)
 (modules types line_parser diff_parser)
 (wrapped false)
 (libraries angstrom yojson ppx_show.runtime)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_show ppx_expect))
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name parser)
 (modules parser)
 (libraries diff_parser)
 (preprocess
  (pps ppx_show))
 (instrumentation
  (backend bisect_ppx)))
