(env
 (dev
  (flags
   (:standard -w -9-27-32))))

(executable
 (package reviewer)
 (name main)
 (public_name reviewer)
 (modules main)
 (libraries yojson diff_parser curly)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name diff_parser)
 (public_name reviewer.diff_parser)
 (synopsis "Parser for diff file format")
 (modules types line_parser diff_parser)
 (wrapped false)
 (libraries angstrom)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name parser)
 (modules parser)
 (libraries diff_parser)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name diff_parser_tests)
 (package reviewer)
 (modules tests)
 (libraries diff_parser)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test_nobase ppx_expect_nobase))
 (instrumentation
  (backend bisect_ppx)))
