(cram
 (deps
  %{project_root}/review/parser.exe
  %{project_root}/review/main.exe
  ;
  ))

(cram
 (applies_to extended)
 (deps extended.diff))

(cram
 (applies_to extended2)
 (deps extended2.diff))

; (cram
;  (applies_to extended3)
;  (deps extended3.diff))

(cram
 (applies_to no_new_line)
 (deps no_new_line.diff))
