(env
 (_
  (flags
   (:standard -w -3-9-32-33-39 -warn-error -26-27))))

(documentation
 (package zanuda))

(library
 (name zanuda_core)
 (public_name zanuda.core)
 (synopsis "Core library for the linter")
 (modules
  Dune_project
  Collected_lints
  Collected_decls
  Config
  LINT
  Lint_filesystem
  Load_dune
  Unused_ML_logger
  Utils)
 (modules_without_implementation LINT)
 (flags
  (:standard -w -no-cmx-file))
 (libraries
  base
  compiler-libs.common
  sexplib
  yojson
  dune-build-info
  Tast_pattern)
 (preprocess
  (pps
   ppx_optcomp
   ppx_sexp_conv
   ppx_expect_nobase
   ;
   ))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))

(executable
 (name main)
 (public_name zanuda)
 (modules main)
 (libraries
  base
  yojson
  ppxlib
  compiler-libs.common
  Tast_pattern
  zanuda_core
  TypedLints
  UntypedLints)
 (preprocess
  (pps ppx_inline_test_nobase))
 (instrumentation
  (backend bisect_ppx))
 (package zanuda))
