(env
 (dev
  (flags
   (:standard -w -3-9-32-39 -warn-error -26-27))))

(library
 (name hack)
 (modules hack)
 (wrapped false)
 (inline_tests)
 (libraries str)
 (preprocess
  (pps ppx_inline_test))
 (foreign_stubs
  (language c)
  (names stubs)))

(executable
 (name mylint)
 (public_name mylinter)
 (modules
  LINT
  ;Rdjson
  mylint)
 (modules_without_implementation LINT)
 (libraries base compiler-libs.common hack)
 (package mylinter))
