(env
 (_
  (flags
   (:standard -w -9-32-39))))

(library
 (name Tast_pattern)
 (public_name zanuda.tast_pattern)
 (modules Tast_pattern My_printtyped My_untype)
 (wrapped false)
 (libraries ppxlib)
 (preprocess
  (pps ppx_optcomp ppx_assert ppx_inline_test_nobase))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))

(library
 (name ast_pattern_tests)
 (modules ast_pattern_tests)
 (inline_tests)
 (libraries Tast_pattern compiler-libs compiler-libs.common)
 (preprocess
  (pps ppx_optcomp ppx_expect_nobase)))
