(library
 (name TypedLints)
 (libraries zanuda_core Tast_pattern Refactoring)
 (modules
  AmbiguousConstructors
  ExcTryWithWildcard
  Equality
  Equality_phys
  Eta
  Failwith
  Format
  Hashtables
  If_bool
  License
  List_fusion
  List_length
  Match_Bool
  Monad_laws
  Mutually_rec_types
  Nested_if
  Propose_function
  Record_punning
  String_concat
  String_concat_fold
  Ignore
  Tuple_matching
  ;
  )
 (preprocess
  (pps ppx_inline_test ppxlib.metaquot))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
