(library
 (name TypedLints)
 (libraries zanuda_core Tast_pattern Refactoring)
 (modules
  Aggregate_defs
  Ambiguous_constructors
  Exc_try_with_wildcard
  Equality
  Equality_phys
  Eta
  Failwith
  Format
  Guard_instead_of_if
  Hashtables
  If_bool
  Ignore
  License
  List_fusion
  List_length
  Match_Bool
  Monad_laws
  Mutually_rec_types
  Nested_if
  Propose_function
  Record_punning
  String_concat
  String_concat_fold
  Tuple_matching
  ;
  )
 (preprocess
  (pps ppx_inline_test_nobase ppxlib.metaquot))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
