(library
 (name TypedLints)
 (libraries zanuda_core Tast_pattern Refactoring)
 (package zanuda)
 (modules
  Aggregate_defs
  Ambiguous_constructors
  Exc_try_with_wildcard
  Equality
  Equality_phys
  Eta
  Failwith
  Guard_instead_of_if
  Hashtables
  If_bool
  Ignore
  License
  List_fusion
  List_length
  Manual_fold
  Manual_map
  Match_Bool
  Monad_laws
  Mutually_rec_types
  Nested_if
  Parsetree_has_docs
  Printf
  Propose_function
  Record_punning
  String_concat
  String_concat_fold
  Tuple_matching
  ;
  )
 (preprocess
  (pps ppx_inline_test_nobase ppxlib.metaquot))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
