(library
 (name UntypedLints)
 (libraries Tast_pattern zanuda_core angstrom)
 (modules
  AmbiguousConstructors
  Casing
  GuardInsteadOfIf
  ParsetreeHasDocs
  Propose_function
  ToplevelEval
  Dollar
  VarShouldNotBeUsed
  License
  ;
  )
 (preprocess
  (pps ppxlib.metaquot ppx_expect))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
