(library
 (name UntypedLints)
 (libraries Tast_pattern zanuda_core angstrom)
 (modules
  Casing
  GuardInsteadOfIf
  Dollar
  Manual_fold
  Manual_map
  ParsetreeHasDocs
  Propose_function
  ToplevelEval
  VarShouldNotBeUsed
  ;
  )
 (preprocess
  (pps ppxlib.metaquot ppx_expect))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
