(library
 (name UntypedLints)
 (libraries Tast_pattern zanuda_core angstrom)
 (modules
  Casing
  Dollar
  Manual_fold
  Manual_map
  Parsetree_has_docs
  Propose_function
  Toplevel_eval
  Var_should_not_be_used
  ;
  )
 (preprocess
  (pps ppxlib.metaquot ppx_expect))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
