(library
 (name testlib1)
 (package testsuite1)
 (modules Lib)
 (lint
  (action
   (run mylinter %{input-file} -o /tmp/out.md))))

(library
 (name testlib2)
 (package testsuite2)
 (modules Lib2 Parsetree)
 (modules_without_implementation Parsetree)
 (lint
  (action
   (run mylinter %{input-file} -o /tmp/out.md -ogolint /tmp/out.golint -ordjsonl /tmp/out.rdjsonl -ws %{workspace_root}))))

(cram
 (deps %{workspace_root}/utils/mylint.exe))
