(library
 (name testlib1)
 (package testsuite1)
 (modules Lib)
 (lint
  (action
   (run
    mylinter
    %{input-file}
    -ordjsonl
    /tmp/out.rdjsonl
    -ws
    %{workspace_root}))))

(library
 (name testlib2)
 (package testsuite2)
 (modules Lib2 ast)
 (modules_without_implementation ast)
 (lint
  (action
   (run
    mylinter
    %{input-file}
    -ordjsonl
    /tmp/out.rdjsonl
    -ws
    %{workspace_root}))))

(executable
 (name exec1)
 (modules exec1)
 (libraries testsuite2)
 (lint
  (action
   (run
    mylinter
    %{input-file}
    -ordjsonl
    /tmp/out.rdjsonl
    -ws
    %{workspace_root}))))

(cram
 (deps %{workspace_root}/utils/mylint.exe))
