(library
 (name testlib1)
 (wrapped false)
 (libraries base)
 (modules
  list_len
  Parsetree
  Failwith
  Function
  ExcTryWithWildcard
  Record1
  Ignore)
 (modules_without_implementation parsetree))

(executable
 (name exec1)
 (modules exec1)
 (libraries testlib1))

(cram
 (deps %{workspace_root}/utils/mylint.exe))
