(executable
 (name exec1)
 (modules exec1))

(cram
 (deps ./zanuda.exe)
 (package zanuda))

(rule
 (deps %{project_root}/src/main.exe)
 (target zanuda.exe)
 (package zanuda)
 (action
  (copy %{deps} %{target})))

(cram
 (applies_to Eta)
 (enabled_if
  (< %{ocaml_version} "5.0.0")))

(cram
 (applies_to Eta53)
 (enabled_if
  (>= %{ocaml_version} "5.3.0")))
