(library
 (name testlib1)
 (package testsuite1)
 (modules Lib)
 ;  (lint
 ;   (action
 ;    (run
 ;     zanuda
 ;     %{input-file}
 ;     -ordjsonl
 ;     /tmp/out.rdjsonl
 ;     -ws
 ;     %{workspace_root})))
 )

(library
 (name testlib2)
 (package testsuite2)
 (modules Lib2 ast)
 (modules_without_implementation ast)
 ;  (lint
 ;   (action
 ;    (run
 ;     zanuda
 ;     %{input-file}
 ;     -ordjsonl
 ;     /tmp/out.rdjsonl
 ;     -ws
 ;     %{workspace_root})))
 )

(library
 (name dollar)
 (modules dollar)
 (package testsuite3)
 ;  (lint
 ;   (action
 ;    (run
 ;     zanuda
 ;     %{input-file}
 ;     -ordjsonl
 ;     /tmp/out.rdjsonl
 ;     -ws
 ;     %{workspace_root})))
 )

(library
 (name test_startingWildcard)
 (modules
  parser1
  startingWildcard
  ;
  )
 (package testsuite4)
 (lint
  (action
   (run
    zanuda
    %{input-file}
    -ordjsonl
    /tmp/out.rdjsonl
    -ws
    %{workspace_root}))))

(menhir
 (modules parser1)
 (flags --explain)
 (infer true))

(cram
 (deps %{workspace_root}/utils/mylint.exe))

(cram
 (deps %{bin:zanuda}))
