(library
 (name test_license)
 (wrapped false)
 (libraries asdf)
 (modules
  good
  bad
  bad2
  bad3
  ;
  ))

(executable
 (name REPL)
 (modules REPL))

(alias
 (name default)
 (deps ./REPL.exe test_license.cmxa test_license_with_ppx.cmxa))

(library
 (name test_license_with_ppx)
 (wrapped false)
 (libraries asdf)
 (modules good2)
 (inline_tests)
 ;  (flags
 ;   (:standard -dsource))
 (preprocess
  (pps ppx_inline_test ppx_assert bisect_ppx))
 (instrumentation
  (backend bisect_ppx)))
