(library
 (name test_license)
 (wrapped false)
 (libraries asdf)
 (modes byte)
 (modules
  good
  bad
  bad2
  bad3
  ;
  ))

(executable
 (name REPL)
 (modes byte)
 (modules REPL))

(alias
 (name default)
 (deps ./REPL.bc test_license.cma test_license_with_ppx.cma))

(library
 (name test_license_with_ppx)
 (wrapped false)
 (libraries asdf)
 (modules good2)
 (inline_tests)
 ;  (flags
 ;   (:standard -dsource))
 (preprocess
  (pps ppx_inline_test ppx_assert bisect_ppx))
 (instrumentation
  (backend bisect_ppx)))
