(library
 (name testlib3)
 (package testsuite2)
 (modules A)
 (libraries testlib2)
 ;  (lint
 ;   (action
 ;    (run
 ;     zanuda
 ;     %{input-file}
 ;     -ordjsonl
 ;     /tmp/out.rdjsonl
 ;     -ws
 ;     %{workspace_root})))
 )

(cram
 (deps %{bin:zanuda}))

(cram
 (deps %{workspace_root}/utils/mylint.exe))
